# Changelog

## Unreleased

## v0.0.3

- Add MIT license file
- Add Changelog file
- Add `make release` cmd
- Improve layout and navigation
- Fix panic when deck subroute was not found, eg: /decks/XXXX/edit
- Fix S3 job jpg extension

## v0.0.2

- Update cm/server to use only env vars
- Update Dockerfile.dev for local development

## v0.0.1

Initial public release