@@ -11,6 +11,7 @@
     <div class="column is-8">
       <h1 class="title">{{ .Name }}</h1>
       <p class="subtitle">{{ .Description }}</p>
+      <a href="{{ .EditPath }}" >edit</a>
     </div>
     <div class="column is-4">
       <h3 class="title is-4">Tags</h3>
