@@ -1,0 +1,36 @@
+{{ define "content" }}
+<nav class="breadcrumb" aria-label="breadcrumbs">
+  <ul>
+    <li><a href="/decks/">Decks</a></li>
+    <li class="is-active"><a href="#" aria-current="page">{{ .Name }}</a></li>
+  </ul>
+</nav>
+
+<form action="{{ .Path }}" method="post" accept-charset="utf-8">
+  <h1 class="title">Edit Deck</h1>
+  <div class="columns">
+    <div class="column is-4">
+      <div class="field">
+        <label class="label">Name *</label>
+        <div class="control">
+          <input class="input" type="text" name="name" value="{{ .Name }}" required />
+        </div>
+      </div>
+      <div class="field">
+        <label class="label">Description</label>
+        <div class="control">
+          <textarea class="textarea" name="description" rows="2">{{ .Description }}</textarea>
+        </div>
+      </div>
+      <div class="field is-grouped">
+        <div class="control">
+          <input class="button is-primary" type="submit" value="Update" />
+        </div>
+        <div class="control">
+          <a class="button is-text" href="/decks">Cancel</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</form>
+{{ end }}
